--- a/index.html
+++ b/index.html
@@ -40,11 +40,12 @@
     
     <section id="redes" class="social-icons">
         <h2>Redes Monitoradas</h2>
-        <img src="tiktok.png" alt="TikTok">
-        <img src="instagram.png" alt="Instagram">
-        <img src="x.png" alt="X">
-        <img src="kwai.png" alt="Kwai">
-        <img src="youtube.png" alt="YouTube">
+      <img src="images/tiktok.png" alt="TikTok">
+<img src="images/instagram.png" alt="Instagram">
+<img src="images/x.png" alt="X">
+<img src="images/kwai.png" alt="Kwai">
+<img src="images/youtube.png" alt="YouTube">
+
     </section>
     
     <section id="contato" class="cta">
