--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <section id="contato" class="cta">
         <h2>Quer impulsionar sua marca?</h2>
         <p>Entre em contato e descubra como podemos transformar sua estratégia digital.</p>
-        <a href="creators.intelligence.data@gmail.com">Fale Conosco</a>
+        <a href="mailto:creators.intelligence.data@gmail.com">Fale Conosco</a>
     </section>
     
     <footer>
